Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.4.7
----------------------------------------------------------------------
- Fix PayPal Single settings did not save email address in rare cases

1.0.4.6
----------------------------------------------------------------------
- Fix problems with plugin settings after upgrading
- Fix issue where Front-End pages were not working (e.g. with Jetpack)

1.0.4.5
----------------------------------------------------------------------
- Add new Help section with documentation of shortcodes
- Fix: Membership Pages use default WordPress posts instead of URL
- Fix: Menu items are correctly generated when a Membership is created
- Memberships with pending payments can be cancelled by the member
- A ton of small bugfixes and minor improvements

1.0.4.4
----------------------------------------------------------------------
- Add individual URL group permissions on membership level
- Add column with gateway status to the payment settings
- Fix bug where registration did not work directly after initial setup
- Fix caption of the "Login" button in the login page
- Fix a lot of small issues in the Members page
- Fix bugs with Comment protection
- Fix BuddyPress permissions (Add-on)
- Many small improvements and bugfixes all over the place

1.0.4.3
----------------------------------------------------------------------
- Add new Member-Filter that displays users with pending payments
- Fix protection of menu-items when user has multiple memberships
- Fix permission issues with protection shortcode
- Fix small bugs with several shortcodes
- Remove access to registration page while plugin is disabled

1.0.4.2
----------------------------------------------------------------------
- Add new Add-on to replace whole menus per membership-level
- Some small bugfixes

1.0.4.1